--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "set NODE_ENV=test&& jest --config ./test/jest-e2e.json",
+    "test:e2e:verbose": "set NODE_ENV=test&& jest --config ./test/jest-e2e.json --verbose --no-cache",
     "start:with-mongo": "cross-env DATABASE_DRIVER=mongodb nest start --watch"
   },
   "dependencies": {
