--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,8 @@
 DATABASE_DRIVER="mongodb"
 DATABASE_URL="mongodb://localhost:27017/practicum"
+POSTGRES_HOST="localhost"
+POSTGRES_PORT=5432
+POSTGRES_USERNAME="your_username"
+POSTGRES_PASSWORD="your_password"
+POSTGRES_DATABASE="film_db"
 DEBUG=*
