--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,6 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "init:mongo": "ts-node --project tsconfig.scripts.json scripts/init-mongo-data.ts",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -19,22 +18,22 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "set NODE_ENV=test&& jest --config ./test/jest-e2e.json",
-    "test:e2e:verbose": "set NODE_ENV=test&& jest --config ./test/jest-e2e.json --verbose --no-cache",
-    "start:with-mongo": "cross-env DATABASE_DRIVER=mongodb nest start --watch"
+    "test:e2e:verbose": "set NODE_ENV=test&& jest --config ./test/jest-e2e.json --verbose --no-cache"    
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/serve-static": "^4.0.2",
+    "@nestjs/typeorm": "^11.0.0",
     "@types/debug": "^4.1.12",
     "debug": "^4.3.5",
     "dotenv": "^16.4.5",
-    "mongoose": "^8.18.2",
+    "pg": "^8.16.3",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.27"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -42,8 +41,6 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
-    "@types/mongodb": "^4.0.6",
-    "@types/mongoose": "^5.11.96",
     "@types/node": "^20.19.17",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
