feat: add PostgreSQL integration3

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,6 @@
-DATABASE_DRIVER="mongodb"
-DATABASE_URL="mongodb://localhost:27017/practicum"
+DATABASE_DRIVER="postgres"
 POSTGRES_HOST="localhost"
 POSTGRES_PORT=5432
-POSTGRES_USERNAME="your_username"
-POSTGRES_PASSWORD="your_password"
-POSTGRES_DATABASE="film_db"
-DEBUG=*
+POSTGRES_USERNAME="prac"
+POSTGRES_PASSWORD="prac"
+POSTGRES_DATABASE="prac"
