feat: add PostgreSQL integration5

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
-DATABASE_DRIVER="postgres"
-POSTGRES_HOST="localhost"
+DATABASE_DRIVER=postgres
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
-POSTGRES_USERNAME="prac"
-POSTGRES_PASSWORD="prac"
-POSTGRES_DATABASE="prac"
+POSTGRES_USERNAME=prac
+POSTGRES_PASSWORD=prac
+POSTGRES_DATABASE=prac
