--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "set NODE_ENV=test&& jest --config ./test/jest-e2e.json",
-    "test:e2e:verbose": "set NODE_ENV=test&& jest --config ./test/jest-e2e.json --verbose --no-cache"    
+    "test:e2e:verbose": "set NODE_ENV=test&& jest --config ./test/jest-e2e.json --verbose --no-cache",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli",
+    "migration:run": "npm run typeorm migration:run -- -d src/data-source.ts"  
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
